# chess-timer-rs

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs
